Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetnumber.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, number> yoda
        number ret = yoda:useForce(one, two)
        output "passed"
     end
end
