Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetnumberFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
